--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   demo-config-server:
-    image: quki09/demo-config-server
+    image: quki09/demo-config-server:latest
     environment:
       TZ: Asia/Seoul
     ports:
